--- a/style.css
+++ b/style.css
@@ -870,9 +870,6 @@ input[type=submit] {
   .main .main__box-rows .sammanfattning-geo {
     grid-column: 1/-1;
   }
-  .main .main__title {
-    font-size: var(--font-size-4);
-  }
 }
 @media screen and (max-width: 680px) {
   .main .main__title {
@@ -886,6 +883,13 @@ input[type=submit] {
   color: var(--color-primary);
   position: relative;
 }
+@media screen and (max-width: 1100px) {
+  #total-linkedin,
+  #total-instagram,
+  #total-facebook {
+    font-size: var(--font-size-4);
+  }
+}
 #total-linkedin::after,
 #total-instagram::after,
 #total-facebook::after {
@@ -893,13 +897,24 @@ input[type=submit] {
   display: inline-block;
   width: 46px;
   height: 46px;
-  margin-left: 3.5rem;
+  margin-left: 0.5rem;
   position: absolute;
-  bottom: 16px;
+  bottom: 12px;
   background-image: url("/assets/icons/trend-up.svg");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+}
+@media screen and (max-width: 1100px) {
+  #total-linkedin::after,
+  #total-instagram::after,
+  #total-facebook::after {
+    width: 36px;
+    height: 36px;
+    margin-left: 0.2rem;
+    position: absolute;
+    bottom: 10px;
+  }
 }
 @media screen and (max-width: 500px) {
   #total-linkedin::after,
@@ -907,7 +922,7 @@ input[type=submit] {
   #total-facebook::after {
     width: 36px;
     height: 36px;
-    margin-left: 3rem;
+    margin-left: 0.2rem;
     position: absolute;
     bottom: 10px;
   }
